--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Blogflow - Create your Blog in 90 seconds"
     />
+    <link rel="icon" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width" />
   </head>
   <style>
