--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Blogflow - Create your Blog in 90 seconds"
     />
     <link rel="icon" href="/assets/favicon.png" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <style>
     html,
@@ -63,6 +63,13 @@
 
     .large-text {
       font-size: 50px;
+      background-image: linear-gradient(
+        to bottom right,
+        #fff,
+        rgba(231, 243, 255, 0.472)
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     @media only screen and (max-width: 600px) {
@@ -93,8 +100,21 @@
       align-items: center;
       gap: 6px;
     }
+
+    #cobe {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      /* width: 500px;
+      height: 500px; */
+      width: min(100vh, 600px);
+      height: min(100vh, 600px);
+    }
   </style>
   <body class="bg">
+    <canvas id="cobe"></canvas>
     <div class="coming-soon">Coming Soon</div>
     <main class="center-box">
       <h1 class="large-text">
@@ -149,6 +169,38 @@
           animate();
         });
       })();
+    </script>
+    <script type="module">
+      import createGlobe from 'https://cdn.skypack.dev/cobe';
+
+      let phi = 0;
+      let canvas = document.getElementById('cobe');
+      const globe = createGlobe(canvas, {
+        devicePixelRatio: 2,
+        width: 1200,
+        height: 1200,
+        phi: 0,
+        theta: 0,
+        dark: 1,
+        diffuse: 1.2,
+        scale: 1,
+        mapSamples: 5000,
+        mapBrightness: 1,
+        baseColor: [1, 0.5, 1],
+        markerColor: [0.5, 1, 0.5],
+        glowColor: [0.4, 0.2, 0.5],
+        offset: [0, 0],
+        markers: [
+          { location: [37.7595, -122.4367], size: 0.1 },
+          { location: [40.7128, -74.006], size: 0.1 },
+        ],
+        onRender: (state) => {
+          // Called on every animation frame.
+          // `state` will be an empty object, return updated params.
+          state.phi = phi;
+          phi += 0.02;
+        },
+      });
     </script>
   </body>
 </html>
