--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
         mapBrightness: 1,
         baseColor: [1, 0.5, 1],
         markerColor: [0.5, 1, 0.5],
-        glowColor: [0.4, 0.2, 0.5],
+        glowColor: [0.4, 0.2, 0.6],
         offset: [0, 0],
+        opacity: 0.8,
         markers: [
           { location: [37.7595, -122.4367], size: 0.1 },
           { location: [40.7128, -74.006], size: 0.1 },
