--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </h1>
       </div>
     </main>
-    <div>
+    <div class="cloudflare-box">
       <span class="powered-by">Powered by</span>
       <svg
         class="cloudflare-logo"
