--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     <main class="center-box">
       <div>
         <h1 class="large-text">
-          Super Fast, Globally Distributed, Customizable Blog in<br /><span
+          <!-- Super Fast, Globally Distributed, Customizable Blog in<br /><span
             class="counter"
             data-num="90"
             >0</span
           >
-          seconds.
+          seconds. -->
+          Blogging Simplified. Also Affordable.
         </h1>
       </div>
     </main>
