--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </h1>
       </div>
     </main>
-    <div class="cloudflare-box">
+    <button data-tf-popup="O8Sx0Hfe" data-tf-opacity="100" data-tf-size="50" data-tf-iframe-props="title=Supercloud Join Waitlist" data-tf-auto-close="" data-tf-transitive-search-params="" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#3E78DC;color:#fff;font-size:14px;border-radius:4px;padding:0 23px;font-weight:bold;height:35px;cursor:pointer;line-height:35px;text-align:center;margin:0;text-decoration:none;" data-tf-loaded="true">Join Waitlist</button>
+    <script src="//embed.typeform.com/next/embed.js"></script>
+    <!-- <div class="cloudflare-box">
       <span class="powered-by">Powered by</span>
       <svg
         class="cloudflare-logo"
@@ -103,7 +105,7 @@
           d="M26.46,129.87A8.44,8.44,0,0,1,18.58,135c-5.21,0-8.8-4.33-8.8-9.29v-.1c0-5,3.49-9.19,8.7-9.19a8.63,8.63,0,0,1,8.18,5.7H36.72c-1.61-8.19-8.81-14.31-18.14-14.31C8,107.84,0,115.86,0,125.74v.09c0,9.89,7.86,17.8,18.48,17.8,9.08,0,16.18-5.88,18.05-13.76Z"
         />
       </svg>
-    </div>
+    </div> -->
     <!-- <div class="social-icons">
       <a href="//twitter.com/suryamodulus" target="_blank">
         <span class="link-text">
