--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h1>
       </div>
     </main>
-    <button data-tf-popup="O8Sx0Hfe" data-tf-opacity="100" data-tf-size="50" data-tf-iframe-props="title=Supercloud Join Waitlist" data-tf-auto-close="" data-tf-transitive-search-params="" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#3E78DC;color:#fff;font-size:14px;border-radius:4px;padding:0 23px;font-weight:bold;height:35px;cursor:pointer;line-height:35px;text-align:center;margin:0;text-decoration:none;" data-tf-loaded="true">Join Waitlist</button>
+    <div data-tf-live="01H70EXGTX0BXFRCRB27TXD6Y0"></div>
     <script src="//embed.typeform.com/next/embed.js"></script>
     <!-- <div class="cloudflare-box">
       <span class="powered-by">Powered by</span>
