--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           seconds. -->
           Blogging Simplified. Also Affordable.
           <br>
-          <span>$</span>
+          <span>At Just $</span>
           <span
             class="counter"
             data-num="5"
