--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           seconds. -->
           Blogging Simplified. Also Affordable.
           <br>
-          <span>At Just $</span>
-          <span
+          <span>@ Just $</span><span
             class="counter"
             data-num="5"
-            ></span>
+            >0</span>
+            <span>/month</span>
         </h1>
       </div>
     </main>
